# nn-ensemble-experiments

./: .gitignore  FINDINGS.md  NAMING.md  README.md  SCOREBOARD.md  pyproject.toml  regenerate_scoreboard.sh  torch_per_label.py
benchmarks/: SCOREBOARD.md  __init__.py  baseline.py  cuda_smoketest.py  datasets.py  device.py  epoch_ensemble.py  inspect_and_ndcg.py  mean.py  mean_ensemble.py  mean_weighted.py  metrics.py  ndcg.py  per_label_weighted_conv_ensemble.py  per_label_weighted_ensemble.py  posthoc_lowrank_residual.py  preprocessing.py  torch_lowrank_mix.py  torch_lowrank_residual.py  torch_lowrank_residual_epsclamp.py  torch_lowrank_residual_mix.py  torch_lowrank_residual_mix_nobias.py  torch_lowrank_residual_mix_norms.py  torch_lowrank_residual_mix_relu.py  torch_lowrank_residual_mix_temp.py  torch_lowrank_residual_sigmoid.py  torch_mean.py  torch_mean_bias.py  torch_mean_bias_ensemble.py  torch_mean_candidate.py  torch_mean_ensemble.py  torch_mean_residual.py  torch_mean_residual_lowrank_mix.py  torch_mean_residual_mlp.py  torch_nn.py  torch_nn_dropout_only.py  torch_nn_log1p.py  torch_nn_lowrank.py  torch_nn_mlp_only.py  torch_nn_residual.py  (+16 more)
benchmarks/models/: torch_mean.py
data/: test-bonsai.npz  test-fasttext.npz  test-mllm.npz  test-nn.npz  train-bonsai.npz  train-nn.npz  train-output.npz
data/koko/: test-mllm.npz  test-nn.npz  test-output.npz  train-mllm.npz  train-output.npz
data/yso-en/: test-bonsai.npz  test-fasttext.npz  test-mllm.npz  test-nn.npz  test-output.npz  train-bonsai.npz  train-mllm.npz  train-output.npz
data/yso-fi/: test-output.npz  train-bonsai.npz  train-mllm.npz  train-nn.npz  train-output.npz
diagnostics/: torch_per_label__koko.best.json  torch_per_label__yso-en.best.json  torch_per_label__yso-fi.best.json
