[project]
name = "nn-ensemble-experiments"
version = "0.1.0"
description = "Experiments for improving the Annif NN ensemble backend/algorithm"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "torch==2.10.0+cpu",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.10.0%2Bcpu-cp311-cp311-linux_x86_64.whl" }

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
