[project]
name = "nn-ensemble-experiments"
version = "0.1.0"
description = "Experiments for improving the Annif NN ensemble backend/algorithm"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markupsafe==2.1.5",
    "numpy",
    "scipy",
    "torch",
    "torchvision",
]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
packages = ["torch", "torchvision"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
