[project]
name = "nn-ensemble-experiments"
version = "0.1.0"
description = "Experiments for improving the Annif NN ensemble backend/algorithm"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markupsafe==2.1.5",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
torch-cpu = [
    "torch",
]
torch-cu126 = [
    "torch",
]
torch-cu130 = [
    "torch",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
packages = ["torch"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
packages = ["torch"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
packages = ["torch"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
